bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value getIndication
while (getIndication()) {if (getIndication() == "R") {right();
       ^BDR:1: error: not found: value getIndication
while (getIndication()) {if (getIndication() == "R") {right();
                             ^BDR:3: error: not found: value getIndication
                    if (getIndication() == "L") {left();
                        ^BDR:5: error: not found: value getIndication
                    if (getIndication() == "I") {left();
                        ^BDR:8: error: not found: value getIndication
                    if (getIndication() == "A") {forward()}
                        ^BDR:9: error: not found: value getIndication
                    if (getIndication() == "B") {forward();
                        ^BDR:11: error: not found: value getIndication
                    if (getIndication() == "C") {forward();
                        ^BDR:14: error: not found: value getIndication
                    if (getIndication() == "Z") {backward()}
                        ^BDR:15: error: not found: value getIndication
                    if (getIndication() == "Y") {backward();
                        ^BDR:17: error: not found: value getIndication
                    if (getIndication() == "X") {backward();
                        ^