bdr.BDR.scala.code
while (getIndication()) {if (getIndication() == "R") {right();
                           forward()};
                    if (getIndication() == "L") {left();
                           forward()}
                    if (getIndication() == "I") {left();
                           left();
                           forward()}
                    if (getIndication() == "A") {forward()}
                    if (getIndication() == "B") {forward();
                           forward()}
                    if (getIndication() == "C") {forward();
                           forward();
                            forward()}
                    if (getIndication() == "Z") {backward()}
                    if (getIndication() == "Y") {backward();
                           backward()}
                    if (getIndication() == "X") {backward();
                           backward();
                            backward()}}